
  * img: Bugfix to width/height tags for scaled down image when only
    one dimension was provided. Thanks, Per Carlson.
  * editpage: Fix FormattingHelp link on Discussion pages.
  * The umask setting can now be set to private, group, or public,
    avoiding the need to enter octal correctly which is particularly
    difficult in yaml setup files. (smcv)

 -- Joey Hess <joeyh@debian.org>  Thu, 17 Nov 2011 18:52:23 -0400

ikiwiki (3.20111106) unstable; urgency=low

  * searchquery.tmpl: Track escaping change in upstream template.
    Thanks Olly Betts for review.
  * svn: Support subversion 1.7, which does not have .svn in each
    subdirectory.
  * rst: import docutils lazily, to avoid errors during ikiwiki --setup.
    Closes: #637604 (Thanks, smcv)
  * Make the setup automator create YAML formatted files.
  * Fix handling of discussion page creation links to make discussion pages
    in the right place and with the right case. Broken by page case
    preservation feature added in 3.20110707.

 -- Joey Hess <joeyh@debian.org>  Sun, 06 Nov 2011 16:27:29 -0400

ikiwiki (3.20110905) unstable; urgency=low

  * mercurial: Openid nicknames are now used when committing. (Daniel Andersson)
  * mercurial: Implement rcs_commit_staged so comments, attachments, etc
    can be used. (Daniel Andersson)
  * mercurial: Implement rcs_rename, rcs_remove. (Daniel Andersson)
  * mercurial: Fix viewing of a diff containing non-utf8 changes.
    (Daniel Andersson)
  * mercurial: Make both rcs_getctime and rcs_getmtime fast. (Daniel Andersson)
  * mercurial: Implement rcs_diff. (Daniel Andersson)
  * po: Add `LANG_CODE` and `LANG_NAME` template variables. (intrigeri)
  * Fix typo in Danish translation of shortcuts page that caused exponential
    regexp blowup.
  * Fix escaping of html entities in permalinks.
  * Fix escaping of html entities in tag names.
  * Avoid using named capture groups in heredoc code for oldperl compatibility.