@@ -1,13 +1,9 @@
 The `graph` directive is supplied by the [[!iki plugins/graphviz desc=graphviz]] plugin.
 
-This directive allows embedding [graphviz](http://www.graphviz.org/) graphs in a
-page.  Example usage:
+This directive allows embedding [graphviz](http://www.graphviz.org/)
+graphs in a page.  Example usage:
 
 	\[[!graph src="a -> b -> c; a -> c;"]]
-
-Note that graphs will only show up in previews if your browser has
-[[!wikipedia data: URI]] support, or if the same graph already exists on that
-page.
 
 The `graph` directive supports the following parameters:
 
