@@ -6,6 +6,8 @@ ikiwiki (3.20111107) UNRELEASED; urgency=low
   * The umask setting can now be set to private, group, or public,
     avoiding the need to enter octal correctly which is particularly
     difficult in yaml setup files. (smcv)
+  * graphviz: Support urls embedded in the graph, by having graphviz
+    generate an imagemap.
 
  -- Joey Hess <joeyh@debian.org>  Thu, 17 Nov 2011 18:52:23 -0400
 
